2006-03-30  Steve Frécinaux  <steve@istique.net>

	* configure.ac:
	* plugins/pythonconsole/Makefile.am:
	* plugins/pythonconsole/pythonconsole/Makefile.am:
	* plugins/pythonconsole/pythonconsole/__init__.py:
	* plugins/pythonconsole/pythonconsole/console.py:
	* plugins/pythonconsole/pythonconsole.gedit-plugin.desktop.in:

	New interactive python console, more terminal-looking and less space
	consuming than the old one.

2006-03-25  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* configure.ac: Get rid of explicit libbonobo and bonobo-activation
	checks now that they are not directly required by gedit.

2006-03-23  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/dialogs/gedit-search-dialog.c: tweak focus handling some
	more. Bug 335169.

2006-03-23  Steve Frécinaux  <steve@istique.net>

	* gedit/gedit-plugin-manager.c: show a description of the plugins
	in the plugin manager window, the way Epiphany does. (bug 326917)
	Patch by Przemysław Grzegorczyk.

2006-03-23  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/functions.py: enable syntax
	highlighting on the file created by the tool if relevant.
	
2006-03-23  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py: fixes the disappearance
	of a snippet when it is reverted and it is the last user snippet in 
	the language (bug #334305). The fix simply sets the library of
	the snippet back to the system library before removing the snippet from 
	the user library, thus not causing it to be removed itself when the user
	library (and all its snippets) is removed from the container.

2006-03-22  Tommi Vainikainen  <thv@iki.fi>

	* configure.ac (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-21  Steve Frécinaux  <steve@istique.net>

	* plugin/externaltools/tools/functions.py: fix bug 335302 (tools input
	methods). Patch by Juha Sahakangas.

2006-03-19  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py: fix bug 334638