@@ -1,5 +1,10 @@
 2006-03-30  Steve Frécinaux  <steve@istique.net>
 
+	* gedit/gedit-python-module.c: allow import of python modules with a '.'
+	(bug 336403). Patch by Johan Dahlin.
+
+2006-03-30  Steve Frécinaux  <steve@istique.net>
+
 	* configure.ac:
 	* plugins/pythonconsole/Makefile.am:
 	* plugins/pythonconsole/pythonconsole/Makefile.am:
